--- a/Progetto_Catan/Progetto_Catan.vcxproj.filters
+++ b/Progetto_Catan/Progetto_Catan.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Progetto_Catan.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="board.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="header.h">
+      <Filter>File di origine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
