rappresentazione grafica(completamente ciolata), texture sprite e casistiche stampa

--- a/Progetto_Catan/Progetto_Catan.vcxproj.filters
+++ b/Progetto_Catan/Progetto_Catan.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="bioma.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="lati.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
