disegno vertici, immagini vertici (da sistemare), e robe varie

--- a/Progetto_Catan/Progetto_Catan.vcxproj
+++ b/Progetto_Catan/Progetto_Catan.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="bioma.cpp" />
     <ClCompile Include="board.cpp" />
+    <ClCompile Include="disegno.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Progetto_Catan.cpp" />
     <ClCompile Include="utente.cpp" />
