--- a/Progetto_Catan/Progetto_Catan.vcxproj
+++ b/Progetto_Catan/Progetto_Catan.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="board.cpp" />
     <ClCompile Include="disegno.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="piazzamenti.cpp" />
     <ClCompile Include="Progetto_Catan.cpp" />
     <ClCompile Include="utente.cpp" />
   </ItemGroup>
