--- a/Progetto_Catan/Progetto_Catan.vcxproj.filters
+++ b/Progetto_Catan/Progetto_Catan.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="game.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="disegno.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="piazzamenti.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
